fix(style): mobile center aligned hero

--- a/static/code/css/ubq.css
+++ b/static/code/css/ubq.css
@@ -43,6 +43,7 @@ h1 {
   /* letter-spacing: 4px; */
   text-rendering: geometricPrecision;
   font-weight: 400;
+  text-align: center;
 }
 body.Active foreground > span {
   transition: var(--page-init);
@@ -1094,13 +1095,15 @@ body.Active #Info ol li a > span {
 
 header > aside::before {
   content: "›› ";
-  /* display: inline-block; */
-  /* opacity: 1; */
   color: #808080;
   margin: 0 2px 0 18px;
-  /* padding-left: 8px; */
 }
 
+header > aside::after {
+  content: " ‹‹";
+  color: #808080;
+  margin: 0 18px 0 2px;
+}
 #Info {
   color: #bfbfbf;
   text-align: center;
